# rosbag2_broll

./: README.md
.github/workflows/: lint.yml  test.yml
avcodec_msgs/: CMakeLists.txt  README.md  package.xml
avcodec_msgs/msg/: Rational.msg  VideoCodecParameters.msg
broll/: CMakeLists.txt  README.md  package.xml
broll/include/broll/: frame_decoder.hpp  msg_conversions.hpp  video_reader.hpp
broll/src/: decode_node.cpp  frame_decoder.cpp  logging.hpp  msg_conversions.cpp  video_reader.cpp
rosbag2_storage_broll/: CMakeLists.txt  README.md  package.xml  rosbag2_storage_plugin.xml
rosbag2_storage_broll/include/rosbag2_storage_broll/: bag_utils.hpp
rosbag2_storage_broll/src/: bag_utils.cpp  broll_storage.cpp
