<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>broll</name>
  <version>0.0.0</version>
  <description>B-Roll utility library for interacting with video stream data in the context of rosbag2</description>
  <maintainer email="emerson.knapp@bonsairobotics.ai">Emerson Knapp</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <depend>ffmpeg</depend>
  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
